--- a/styles/style.scss
+++ b/styles/style.scss
@@ -984,9 +984,11 @@ screen and (min-height: 800px) {
 @media screen and (max-width: 350px) {
     .hero-section {
         .hero-content-container {
+            padding-top: 15em;
+
             .hero-nav-links {
                 position: relative;
-                margin-bottom: 4em;
+                margin-bottom: 8em;
                 margin-left: -1em;
             }
 
