--- a/styles/style.scss
+++ b/styles/style.scss
@@ -37,6 +37,7 @@ a {
 
 html {
     width: 100%;
+    overflow-x: hidden;
 }
 
 body {
@@ -988,7 +989,7 @@ screen and (min-height: 800px) {
 
             .hero-nav-links {
                 position: relative;
-                margin-bottom: 8em;
+                margin-bottom: 6em;
                 margin-left: -1em;
             }
 
