--- a/styles/style.css
+++ b/styles/style.css
@@ -27,13 +27,10 @@ a:hover {
   transition: 0.1s;
 }
 
-html {
-  width: 100%;
-  overflow-x: hidden;
-}
-
+html,
 body {
   overflow-x: hidden;
+  max-width: 100%;
 }
 
 nav {
