--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,14 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@600&family=Poppins&display=swap");
 @font-face {
-  font-family: "Gilroy-Light";
-  src: url("../font/Radomir Tinkov - Gilroy-Light.otf");
+  font-family: "Montserrat Alternates";
+  src: url("../font/MontserratAlternates-Regular.ttf");
 }
 @font-face {
-  font-family: "Gilroy-Bold";
-  src: url("../font/Radomir Tinkov - Gilroy-ExtraBold.otf");
+  font-family: "Poppins";
+  src: url("../font/Poppins-Medium.ttf");
+}
+@font-face {
+  font-family: "Helmet";
+  src: url("../font/Helmet-Regular.ttf");
 }
 * {
   margin: 0;
@@ -39,7 +42,6 @@ nav {
   display: flex;
   align-items: center;
   gap: 0.5em;
-  font-family: "Gilroy-Bold";
 }
 nav .nav-break {
   text-align: justify;
@@ -47,7 +49,7 @@ nav .nav-break {
 
 .hero-section {
   background-color: #dddddd;
-  font-family: "Montserrat Alternates", "Gilroy-Light";
+  font-family: "Montserrat Alternates";
   height: 100vh;
   padding: 2em 6em;
   position: relative;
@@ -111,7 +113,7 @@ nav .nav-break {
   background-color: #cccccc;
   height: 100vh;
   position: relative;
-  font-family: "Gilroy-Light";
+  font-family: "Helmet";
   padding: 0 6em;
   position: relative;
 }
@@ -223,7 +225,7 @@ nav .nav-break {
   padding-left: 4em;
   padding-top: 1em;
   width: 70%;
-  font-family: "Poppins", "Gilroy-Light";
+  font-family: "Poppins";
 }
 
 .rotating-link a {
@@ -252,7 +254,7 @@ nav .nav-break {
 .tech-stack-marquee {
   padding: 1em 0;
   font-size: 2em;
-  font-family: "Poppins", "Gilroy-Light";
+  font-family: "Helmet";
   color: #aaaaaa;
   height: auto;
 }
@@ -260,7 +262,6 @@ nav .nav-break {
 .projects-section {
   height: auto;
   background-color: #cccccc;
-  font-family: "Montserrat Alternates", "Gilroy-Light";
   padding: 4em 6em;
 }
 .projects-section .projects-section-content-container {
@@ -268,7 +269,7 @@ nav .nav-break {
 }
 .projects-section .projects-section-content-container .projects-heading {
   font-size: 3em;
-  font-family: "Gilroy-light";
+  font-family: "Helmet";
   color: #aaaaaa;
   font-weight: 700;
 }
@@ -297,7 +298,7 @@ nav .nav-break {
   height: 100%;
   padding-top: 1em;
   padding-bottom: 4em;
-  font-family: "Poppins", "Gilroy-Light" sans-serif;
+  font-family: "Helmet";
 }
 .individual-project img {
   width: 30em;
@@ -350,12 +351,13 @@ nav .nav-break {
 
 .second-rotating-link {
   text-align: center;
+  font-family: "Helmet";
 }
 
 .contact {
   height: 100vh;
   background-color: #dddddd;
-  font-family: "Gilroy-Light";
+  font-family: "Poppins";
   position: relative;
   padding: 8em 6em;
 }
@@ -388,8 +390,9 @@ nav .nav-break {
 
 .footer {
   padding: 1em 6em;
-  font-family: "Gilroy-Light";
+  font-family: "Helmet";
   background-color: #cccccc;
+  color: #aaaaaa;
   text-align: center;
 }
 
