--- a/styles/style.scss
+++ b/styles/style.scss
@@ -51,6 +51,7 @@ nav {
     display: flex;
     align-items: center;
     gap: .5em;
+    font-family: 'Montserrat Alternates';
 
     .logo-text {
         font-weight: 900;
